kubernetes/django-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django-app
        image: django_app:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
